--- a/style.css
+++ b/style.css
@@ -56,22 +56,66 @@ header .heading { /* headerタグ内のheadingクラスにのみ反映される 
     color: #fff; /* 文字色を白に変更 */
   }
 
-.main {
-  width: 840px; /* 横幅いっぱい */
+main {
+  width: 800px; /* 横幅いっぱい */
   
   display: flex; /* Flexboxの利用 */
   justify-content: center; /* 子要素の横並び・中央寄せ */
   margin: 0 auto;
+  padding: 70px 0;
 }
 .blog {
-  width: 600px; /* 横幅600px */
-  height: 1400px; /* 高さ600px */
+  width: 540px; /* 横幅600px */
+  margin-right: 30px;
+}
+
+.blog-heading{
+  border-bottom: 8px solid #f7f7f7;
+  text-align: center;
+  line-height:0.6;
+}
+
+.blog-box{
+  padding-top: 50px;
+}
+
+.blog-item{
+  display: flex;
+  justify-content: flex-start;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #f7f7f7;
+}
+
+.blog-image{
+  height: 180px;
+}
+
+.blog-text{
+  padding-top:25px ;
+  padding-left: 30px;
+}
+
+.blog-text-heading{
+  padding-bottom: 15px;
+}
+
+.blog-date{
+  display: inline-block;
+  font-size: 12px;
+}
+
+.category{
+  display: inline-block;
+  padding: 5px 8px;
+  background-color: #acabab;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 11px;
 }
 
 .sidebar {
-  width: 240px; /* 横幅240px */
-  height: 1400px; /* 高さ600px */
-  
+  width: 230px;
 }
 
 footer {
